TEST_PROGRAMS/INVALID/04/79.go
package main

func main() {
    var a, b = 2

    // Illegal number of operands
    a, b += a, b
}
